--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -6,6 +6,7 @@
 @import "variables/dropdown";
 @import "variables/fonts";
 @import "variables/forms";
+@import "variables/grid";
 @import "variables/navbar";
 @import "variables/options";
 @import "variables/pagination";
@@ -20,11 +21,5 @@
 @import "components/card";
 @import "components/dropdowns";
 @import "components/layout";
-@import "components/nav";
-@import "components/navbar";
-@import "components/pagination";
-@import "components/player";
-@import "components/playlist";
-@import "components/responsive-embed";
 @import "components/transition";
 @import "components/type";
