Link hover decoration is none

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -7,6 +7,7 @@
 @import "variables/fonts";
 @import "variables/forms";
 @import "variables/grid";
+@import "variables/links";
 @import "variables/navbar";
 @import "variables/options";
 @import "variables/pagination";
