Fix pagination link style

--- a/assets/css/variables/_links.scss
+++ b/assets/css/variables/_links.scss
@@ -1,1 +1,4 @@
+@import "system-color";
+
+$link-hover-color:                        darken($primary, 15%);
 $link-hover-decoration:                   none;
