--- a/assets/css/variables/_pagination.scss
+++ b/assets/css/variables/_pagination.scss
@@ -1,4 +1,7 @@
+@import "links";
+
 $pagination-bg:             transparent;
 $pagination-border-color:   none;
+$pagination-hover-color:    $link-hover-color;
 $pagination-hover-bg:       rgba(55,55,55,0.4);
 $pagination-disabled-bg:    transparent;
