Combine variables used in sass into one file

--- a/assets/css/components/_card.scss
+++ b/assets/css/components/_card.scss
@@ -1,5 +1,4 @@
-@import "../variables/body";
-@import "../variables/components";
+@import "~assets/css/variables";
 @import "~bootstrap/scss/mixins/breakpoints";
 
 @keyframes fade-in {
