--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,15 +1,126 @@
-@import "variables/alert";
-@import "variables/badge";
-@import "variables/body";
-@import "variables/card";
-@import "variables/components";
-@import "variables/dropdown";
-@import "variables/fonts";
-@import "variables/forms";
-@import "variables/grid";
-@import "variables/links";
-@import "variables/navbar";
-@import "variables/options";
-@import "variables/pagination";
-@import "variables/spacing";
-@import "variables/system-color";
+@import "~bootstrap/scss/functions";
+
+// Color system
+$white:    #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #919191;
+$gray-600: #5e5e5e;
+$gray-700: #474747;
+$gray-800: #2e2e2e;
+$gray-900: #222222;
+$black:    #000;
+
+$primary:       #cc6055;
+$secondary:     $gray-500;
+$light:         $gray-100;
+$dark:          $gray-800;
+
+// Options
+$enable-caret:              false;
+$enable-shadows:            true;
+$enable-print-styles:       false;
+
+// Spacing
+$spacer: 1rem;
+
+// Body
+$body-bg:     $gray-900;
+$body-color:  $gray-400;
+
+// Links
+$link-hover-color:                        darken($primary, 15%);
+$link-hover-decoration:                   none;
+
+// Grid breakpoints
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+);
+
+@include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
+@include _assert-starts-at-zero($grid-breakpoints, "$grid-breakpoints");
+
+// Components
+$border-radius:               .25rem;
+$border-radius-sm:            .15rem;
+
+$component-active-color:      $body-color;
+$component-active-bg:         $body-bg;
+
+// Typography
+$font-family-sans-serif:      "Source Sans Pro", "游ゴシック体", "Yu Gothic", YuGothic sans-serif;
+$font-family-base:            $font-family-sans-serif;
+
+$font-size-base:              1rem;
+$font-size-lg:                ($font-size-base * 1.25);
+$font-size-sm:                ($font-size-base * .875);
+
+$font-weight-light:           300;
+$font-weight-normal:          400;
+$font-weight-bold:            700;
+$font-weight-base:            $font-weight-normal;
+
+$text-muted:                  $gray-600;
+
+$hr-border-color:             rgba($white, .08);
+$hr-margin-y:                 $spacer / 2;
+
+// Forms
+$input-bg:                              darken($gray-900, 1%);
+$input-color:                           darken($gray-400, 15%);
+$input-border-color:                    $gray-800;
+$input-border-focus:                    $primary;
+
+$input-focus-border-color:              lighten($component-active-bg, 25%);
+
+$input-btn-focus-width:                 .2rem;
+$input-btn-focus-color:                 rgba($component-active-bg, .25);
+$input-btn-focus-box-shadow:            0 0 0 $input-btn-focus-width $input-btn-focus-color;
+
+// Navbar
+$navbar-nav-link-padding-x:         .8rem;
+
+$navbar-dark-color:                 rgba($white, .5);
+$navbar-dark-hover-color:           rgba($white, .75);
+$navbar-dark-active-color:          $white;
+$navbar-dark-toggler-border-color:  none;
+
+$navbar-toggler-font-size:          $font-size-base;
+
+$navbar-brand-font-size:            $font-size-lg;
+
+// Dropdowns
+$dropdown-bg:                       $body-bg;
+$dropdown-link-color:               $gray-500;
+$dropdown-link-hover-color:         $gray-300;
+$dropdown-link-hover-bg:            $gray-800;
+$dropdown-divider-bg:               $gray-800;
+$dropdown-box-shadow:               0 .5rem 1rem rgba($black, .175);
+
+// Pagination
+$pagination-bg:             transparent;
+$pagination-border-color:   none;
+$pagination-hover-color:    $link-hover-color;
+$pagination-hover-bg:       rgba(55,55,55,0.4);
+$pagination-disabled-bg:    transparent;
+
+// Cards
+$card-spacer-y:                     .8rem;
+$card-spacer-x:                     .6rem;
+
+$card-border-color:                 $body-bg;
+
+// Badges
+$badge-font-size:                   85%;
+
+// Alerts
+$alert-padding-y:                   .75rem;
+$alert-padding-x:                   1.25rem;
+
+$alert-color-level:                 3;
