Improve some styles

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -5,6 +5,9 @@
 @import "vendor/lazysizes";
 
 @import "components/card";
+@import "components/dropdown";
+@import "components/embed";
 @import "components/layout";
-@import "components/transition";
+@import "components/navbar";
+@import "components/pagination";
 @import "components/type";
