Remove unnecessary transition related settings

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -53,6 +53,8 @@ $border-radius-sm:            .15rem;
 $component-active-color:      $body-color;
 $component-active-bg:         $body-bg;
 
+$transition-collapse:         none;
+
 // Typography
 $font-family-sans-serif:      "Source Sans Pro", "游ゴシック体", "Yu Gothic", YuGothic sans-serif;
 $font-family-base:            $font-family-sans-serif;
