Use enable-transitions instead of transition-collapse

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -21,6 +21,7 @@ $dark:          $gray-800;
 // Options
 $enable-caret:              false;
 $enable-shadows:            true;
+$enable-transitions:        false;
 $enable-print-styles:       false;
 
 // Spacing
@@ -52,8 +53,6 @@ $border-radius-sm:            .15rem;
 
 $component-active-color:      $body-color;
 $component-active-bg:         $body-bg;
-
-$transition-collapse:         none;
 
 // Typography
 $font-family-sans-serif:      "Source Sans Pro", "游ゴシック体", "Yu Gothic", YuGothic sans-serif;
