Improve style options and web font options

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -22,7 +22,7 @@ $dark:          $gray-800;
 $enable-caret:              false;
 $enable-shadows:            true;
 $enable-transitions:        false;
-$enable-print-styles:       false;
+$enable-validation-icons:   false;
 
 // Spacing
 $spacer: 1rem;
