--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -21,7 +21,7 @@ $dark:          $gray-800;
 // Options
 $enable-caret:              false;
 $enable-shadows:            true;
-$enable-transitions:        false;
+// $enable-transitions:        false;
 $enable-validation-icons:   false;
 
 // Spacing
@@ -53,6 +53,8 @@ $border-radius-sm:            .15rem;
 
 $component-active-color:      $body-color;
 $component-active-bg:         $body-bg;
+
+$transition-collapse:         height .3s ease;
 
 // Typography
 $font-family-sans-serif:      "Source Sans Pro", "游ゴシック体", "Yu Gothic", YuGothic sans-serif;
