--- a/assets/css/components/_card.scss
+++ b/assets/css/components/_card.scss
@@ -2,12 +2,12 @@
   .card {
     position: relative;
 
-    @include media-breakpoint-only(xs) {
+    @include media-breakpoint-down(sm) {
       flex-direction: row;
       background-color: $body-bg;
     }
 
-    @include media-breakpoint-up(sm) {
+    @include media-breakpoint-up(md) {
       display: block;
       background-color: $gray-800;
       box-shadow: 1px 1px 2px rgba(0,0,0,.2);
@@ -16,7 +16,7 @@
     .card-img-wrap {
       position: relative;
 
-      @include media-breakpoint-only(xs) {
+      @include media-breakpoint-down(sm) {
         width: 30%;
         height: 30%;
       }
@@ -24,7 +24,7 @@
       .card-img-top {
         cursor: pointer;
 
-        @include media-breakpoint-only(xs) {
+        @include media-breakpoint-down(sm) {
           border-radius: $border-radius-sm;
         }
       }
@@ -38,29 +38,35 @@
         color: $white;
         pointer-events: none;
 
-        @include media-breakpoint-only(xs) {
+        @include media-breakpoint-down(sm) {
           font-size: 150%;
         }
 
-        @include media-breakpoint-up(sm) {
+        @include media-breakpoint-up(md) {
           font-size: 250%;
         }
       }
     }
 
     .card-body {
-      @include media-breakpoint-only(xs) {
+      @include media-breakpoint-down(sm) {
         width: 70%;
         padding-top: 0;
       }
 
       .card-title {
-        margin-bottom: 0;
+        @include media-breakpoint-down(sm) {
+          margin-bottom: 3px;
+        }
+
+        @include media-breakpoint-up(md) {
+          margin: 2px 0px 2px 0px;
+        }
       }
 
       .card-text {
-        @include media-breakpoint-only(xs) {
-          padding-bottom: 10px;
+        @include media-breakpoint-down(sm) {
+            padding-bottom: 25px;
         }
       }
 
@@ -68,14 +74,14 @@
         color: $gray-600;
         text-align: right;
 
-        @include media-breakpoint-only(xs) {
+        @include media-breakpoint-down(sm) {
           position: absolute;
           bottom: 0;
           right: 0;
           font-size: 75%;
         }
 
-        @include media-breakpoint-up(sm) {
+        @include media-breakpoint-up(md) {
           padding-top: 10px;
           font-size: 80%;
         }
