Improve accessibility for .pagination and .btn-link

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -50,8 +50,8 @@ $grid-breakpoints: (
 $border-radius:               .25rem;
 $border-radius-sm:            .15rem;
 
-$component-active-color:      $body-color;
-$component-active-bg:         $body-bg;
+$component-active-color:      $white;
+$component-active-bg:         $primary;
 
 $transition-collapse:         height .3s ease;
 
