--- a/assets/css/components/_pagination.scss
+++ b/assets/css/components/_pagination.scss
@@ -13,14 +13,6 @@
       }
     }
 
-    &:active {
-      outline: 0;
-      box-shadow: 0 0 0 .2rem rgba($primary, .25);
-
-      @include media-breakpoint-down(sm) {
-        color: $link-hover-color;
-        background-color: $pagination-hover-bg;
-      }
-    }
+    @include focus-visible();
   }
 }
