Some minor fixes for styles

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -119,7 +119,8 @@ $card-spacer-x:                     .6rem;
 $card-border-color:                 $body-bg;
 
 // Badges
-$badge-font-size:                   85%;
+$badge-font-size:                   88%;
+$badge-font-weight:                 $font-weight-normal;
 
 // Alerts
 $alert-padding-y:                   .75rem;
