--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 @import "~bootstrap/scss/functions";
 
 // Color system
@@ -31,7 +33,8 @@ $body-bg:     $gray-900;
 $body-color:  $gray-400;
 
 // Links
-$link-hover-color:                        darken($primary, 15%);
+$link-hover-color:                        color.scale($primary, $lightness: -25%);
+
 $link-hover-decoration:                   none;
 
 // Grid breakpoints
@@ -74,12 +77,9 @@ $hr-border-color:             rgba($white, 0.08);
 $hr-margin-y:                 $spacer / 2;
 
 // Forms
-$input-bg:                              darken($gray-900, 1%);
-$input-color:                           darken($gray-400, 15%);
+$input-bg:                              color.scale($gray-900, $lightness: -10%);
+$input-color:                           color.scale($gray-400, $lightness: -25%);
 $input-border-color:                    $gray-800;
-$input-border-focus:                    $primary;
-
-$input-focus-border-color:              lighten($component-active-bg, 25%);
 
 $input-btn-focus-width:                 0.2rem;
 $input-btn-focus-color:                 rgba($component-active-bg, 0.25);
