--- a/assets/css/components/_navbar.scss
+++ b/assets/css/components/_navbar.scss
@@ -1,13 +1,15 @@
+@use "sass:color";
+
 .navbar {
   .navbar-nav {
     a.active {
       @include media-breakpoint-down(sm) {
-        border-left: 3px solid darken($primary, 15%);
+        border-left: 3px solid color.scale($primary, $lightness: -25%);
         padding-left: 5px;
       }
 
       @include media-breakpoint-up(md) {
-        border-bottom: 3px solid darken($primary, 15%);
+        border-bottom: 3px solid color.scale($primary, $lightness: -25%);
         padding-bottom: 5px;
       }
     }
