--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -42,8 +42,7 @@ $grid-breakpoints: (
   xs: 0,
   sm: 576px,
   md: 768px,
-  lg: 992px,
-  xl: 1200px
+  lg: 992px
 );
 
 @include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
