--- a/assets/css/components/_embed.scss
+++ b/assets/css/components/_embed.scss
@@ -1,11 +1,11 @@
 .embed-responsive {
   &-1by1-half {
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(sm) {
       padding-bottom: 100%;
       width: 100%;
     }
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(sm) {
       margin: 0 auto;
       padding-bottom: 56.25%;
       width: 56.25%;
