Add license comments for some packages

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,7 @@
 @import "variables";
 
 // vendor
+@import "vendor/fontawesome";
 @import "vendor/bootstrap";
 @import "vendor/bootstrap-vue";
 @import "vendor/lazysizes";
