--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -53,7 +53,7 @@ $component-active-bg:         $primary;
 $transition-collapse:         height 0.3s ease;
 
 // Typography
-$font-family-sans-serif:      "Source Sans Pro", "游ゴシック体", "Yu Gothic", yugothic sans-serif;
+$font-family-sans-serif:      "Source Sans Pro", "Yu Gothic", yugothic sans-serif;
 $font-family-base:            $font-family-sans-serif;
 
 $font-size-base:              1rem;
