--- a/assets/css/components/_card.scss
+++ b/assets/css/components/_card.scss
@@ -8,7 +8,7 @@
     }
 
     @include media-breakpoint-up(md) {
-      background-color: $gray-800;
+      background-color: $dark;
       box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
       display: block;
     }
@@ -30,7 +30,7 @@
       }
 
       .card-play {
-        color: $white;
+        color: white;
         left: 50%;
         opacity: 0.6;
         pointer-events: none;
@@ -71,7 +71,7 @@
       }
 
       .card-info {
-        color: $gray-600;
+        color: $text-muted;
         text-align: right;
 
         @include media-breakpoint-down(sm) {
