Upgrade bootstrap version from 4 to 5
and some fixes

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -19,18 +19,32 @@ $theme-colors: (
 // Options
 $enable-caret:              false;
 $enable-shadows:            true;
+$enable-smooth-scroll:      false;
 $enable-validation-icons:   false;
 
 // Spacing
 $spacer: 1rem;
+
+$spacers: (
+  0: 0,
+  1: $spacer / 4,
+  2: $spacer / 2,
+  3: $spacer,
+  4: $spacer * 1.5,
+  5: $spacer * 3,
+  6: $spacer * 4.5,
+  7: $spacer * 6,
+  8: $spacer * 7.5,
+);
 
 // Body
 $body-bg:     #222;
 $body-color:  #ced4da;
 
 // Links
-$link-hover-color:                        color.scale($primary, $lightness: -25%);
-$link-hover-decoration:                   none;
+$link-color:                              $primary;
+$link-decoration:                         none;
+$link-hover-color:                        color.scale($link-color, $lightness: -25%);
 
 // Grid breakpoints
 $grid-breakpoints: (
@@ -41,26 +55,26 @@ $grid-breakpoints: (
 );
 
 // Components
+$border-radius:               0.25rem;
+$box-shadow-sm:               0 0.125rem 0.25rem color.scale(black, $lightness: 10%);
 
 // Typography
 $font-family-sans-serif:      "Source Sans Pro", "Yu Gothic", YuGothic sans-serif;
-
 $text-muted:                  #5e5e5e;
-
 $hr-border-color:             color.scale(white, $lightness: 0%, $alpha: -92%);
 $hr-margin-y:                 $spacer / 2;
+$small-font-size:             0.675em;
 
 // Forms
 $input-bg:                              color.scale($body-bg, $lightness: -10%);
+$input-disabled-bg:                     color.scale($body-bg, $lightness: 10%);
 $input-color:                           color.scale($body-color, $lightness: -25%);
 $input-border-color:                    $dark;
 
 // Navbar
 $navbar-nav-link-padding-x:         0.8rem;
-
 $navbar-dark-hover-color:           $light;
 $navbar-dark-toggler-border-color:  none;
-
 $navbar-toggler-font-size:          1rem;
 
 // Dropdowns
@@ -68,20 +82,15 @@ $dropdown-bg:                       $body-bg;
 $dropdown-link-color:               $secondary;
 $dropdown-link-hover-color:         $light;
 $dropdown-link-hover-bg:            $dark;
-$dropdown-divider-bg:               $dark;
+$dropdown-divider-bg:               $secondary;
 
 // Pagination
-$pagination-bg:             transparent;
-$pagination-border-color:   none;
-$pagination-focus-color:    $link-hover-color;
-$pagination-focus-bg:       color.scale($dark, $lightness: 0%, $alpha: -60%);
-$pagination-hover-bg:       $pagination-bg;
-$pagination-disabled-bg:    transparent;
+$pagination-bg:                     transparent;
+$pagination-border-color:           none;
+$pagination-focus-color:            $link-hover-color;
+$pagination-focus-bg:               color.scale($dark, $lightness: 0%, $alpha: -60%);
+$pagination-hover-bg:               $pagination-bg;
+$pagination-disabled-bg:            transparent;
 
-// Cards
-$card-spacer-y:                     0.8rem;
-$card-spacer-x:                     0.6rem;
-
-// Badges
-$badge-font-size:                   88%;
-$badge-font-weight:                 normal;
+// Close
+$btn-close-color:            $light;
