--- a/assets/css/_fontawesome.scss
+++ b/assets/css/_fontawesome.scss
@@ -3,4 +3,4 @@
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
 
-@import '../../../node_modules/@fortawesome/fontawesome-svg-core/styles';
+@import '../../node_modules/@fortawesome/fontawesome-svg-core/styles';
