Use transition style on tag

--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -42,9 +42,9 @@
   vertical-align: baseline;
   white-space: nowrap;
 
+  @include transition();
+
   &:hover {
     color: $body-color;
   }
 }
-
-//
