--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -78,6 +78,7 @@ $navbar-nav-link-padding-x:         0.8rem;
 $navbar-dark-hover-color:           $light;
 $navbar-dark-toggler-border-color:  none;
 $navbar-toggler-font-size:          1rem;
+$navbar-toggler-focus-width:        0;
 
 // Dropdowns
 $dropdown-bg:                       $body-bg;
