--- a/assets/css/_bootstrap.scss
+++ b/assets/css/_bootstrap.scss
@@ -26,6 +26,7 @@
 @import "../../node_modules/bootstrap/scss/nav";
 @import "../../node_modules/bootstrap/scss/navbar";
 @import "../../node_modules/bootstrap/scss/close";
+@import "../../node_modules/bootstrap/scss/offcanvas";
 
 // Helpers
 @import "../../node_modules/bootstrap/scss/helpers/position";
