Improve some styles on offcanvas

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -95,3 +95,7 @@ $pagination-transition:             color 0.15s ease-in-out, background-color 0.
 
 // Close
 $btn-close-color:            $light;
+
+// Offcanvas
+$offcanvas-padding-y:               0.8rem;
+$offcanvas-padding-x:               0.8rem;
