--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -16,24 +16,30 @@
 // Navbar
 .nav-link {
   @include media-breakpoint-down(md) {
+    font-size: 120%;
+
     &::before {
       content: "";
       display: inline-block;
-      margin-right: 0.9rem;
+      margin-right: 0.8rem;
     }
   }
 }
 
 .nav-link.active {
   @include media-breakpoint-down(md) {
+    font-size: 120%;
+
     &::before {
       background-color: var(--bs-primary);
       border-radius: 50%;
+      bottom: 2px;
       content: "";
       display: inline-block;
-      height: 10px;
+      height: 8px;
       margin-right: 0.3rem;
-      width: 10px;
+      position: relative;
+      width: 8px;
     }
   }
 
