Improve some styles for pagination component

--- a/assets/css/_bootstrap.scss
+++ b/assets/css/_bootstrap.scss
@@ -25,6 +25,7 @@
 @import "../../node_modules/bootstrap/scss/dropdown";
 @import "../../node_modules/bootstrap/scss/nav";
 @import "../../node_modules/bootstrap/scss/navbar";
+@import "../../node_modules/bootstrap/scss/pagination";
 @import "../../node_modules/bootstrap/scss/close";
 @import "../../node_modules/bootstrap/scss/offcanvas";
 
