--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -59,6 +59,7 @@ $grid-breakpoints: (
 // Components
 $border-radius:               0.25rem;
 $box-shadow-sm:               0 0.125rem 0.25rem color.scale(black, $lightness: 10%);
+$component-active-bg:         $primary;
 
 // Typography
 $font-family-sans-serif:      "Source Sans Pro", "Yu Gothic", YuGothic sans-serif;
@@ -66,6 +67,12 @@ $text-muted:                  #5e5e5e;
 $hr-border-color:             color.scale(white, $lightness: 0%, $alpha: -92%);
 $hr-margin-y:                 $spacer * 0.5;
 $small-font-size:             0.675em;
+
+// Button + Forms
+$input-btn-focus-width:         0.25rem;
+$input-btn-focus-color:         color.scale($component-active-bg, $lightness: 0%, $alpha: -75%);
+$input-btn-focus-blur:          0;
+$input-btn-focus-box-shadow:    0 0 $input-btn-focus-blur $input-btn-focus-width $input-btn-focus-color;
 
 // Forms
 $input-bg:                              color.scale($body-bg, $lightness: -10%);
@@ -88,10 +95,14 @@ $dropdown-link-hover-bg:            $dark;
 $dropdown-divider-bg:               $secondary;
 
 // Pagination
-$pagination-focus-box-shadow:       0 0 0 0.25rem color.scale($primary, $lightness: 0%, $alpha: -75%);
-$pagination-hover-bg:               color.scale(white, $lightness: 0%, $alpha: -95%);
-$pagination-disabled-color:         color.scale(white, $lightness: 0%, $alpha: -75%);
-$pagination-transition:             color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+$pagination-padding-y:              0.5rem;
+$pagination-bg:                     transparent;
+$pagination-border-width:           0;
+$pagination-focus-bg:               color.scale(white, $lightness: 0%, $alpha: -95%);
+$pagination-focus-box-shadow:       $input-btn-focus-box-shadow;
+$pagination-hover-bg:               transparent;
+$pagination-disabled-color:         $text-muted;
+$pagination-disabled-bg:            transparent;
 
 // Close
 $btn-close-color:            $light;
