Update stylelint related packages
and some improvements

--- a/assets/css/_components.scss
+++ b/assets/css/_components.scss
@@ -59,7 +59,7 @@
   vertical-align: baseline;
   white-space: nowrap;
 
-  @include transition();
+  @include transition;
 
   &:hover {
     color: $body-color;
