--- a/components/track-card/style.scss
+++ b/components/track-card/style.scss
@@ -1,4 +1,4 @@
-@import "../../assets/css/_variables";
+@import "../../assets/css/variables";
 @import "../../node_modules/bootstrap/scss/mixins/breakpoints";
 @import "../../node_modules/bootstrap/scss/mixins/text-truncate";
 
@@ -73,7 +73,7 @@
 .title {
   font-weight: bold;
 
-  @include text-truncate();
+  @include text-truncate;
 
   @include media-breakpoint-down(sm) {
     padding: 0 0.5rem;
