--- a/src/components/App/Loading/style.scss
+++ b/src/components/App/Loading/style.scss
@@ -4,7 +4,7 @@
 }
 
 .loading {
-  color: var(--secondary);
+  color: var(--bs-primary);
   font-size: 150%;
   font-weight: bold;
   pointer-events: none;
