--- a/src/components/The/PlayerLoading/style.scss
+++ b/src/components/The/PlayerLoading/style.scss
@@ -5,9 +5,9 @@
 
 .loading {
   align-items: center;
-  color: var(--bs-secondary);
+  color: var(--bs-body-color);
   display: flex;
-  font-size: 180%;
+  font-size: 1.75rem;
   font-weight: bold;
   justify-content: center;
   pointer-events: none;
