--- a/src/components/form/label/styles.module.css
+++ b/src/components/form/label/styles.module.css
@@ -2,7 +2,7 @@
   margin: 0 0 0.125rem 0.125rem;
 }
 
-.container::after {
+.required::after {
   color: rgb(var(--red-400));
   content: "*";
   margin: 0 0 0 0.25rem;
